# docker-optimizer-agent

./: .automation-scope.yaml  .commitlintrc.json  .dockerignore  .editorconfig  .env.example  .gitignore  .license_header.txt  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  .releaserc.json  .renovaterc.json  .secrets.baseline  .yamllint.yml  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.production  Dockerfile.quantum  Dockerfile.sentiment  MANUAL_SETUP_REQUIRED.md  Makefile  PROJECT_CHARTER.md  README.md  SECURITY.md  autonomous_execution.py  autonomous_scheduler.py  autonomous_sdlc_execution.py  backlog.yml  circuit_breaker.py  codecov.yml  complex_test.dockerfile  demo_ai_optimizer.py  deployment_readiness.py  (+62 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  mlc_config.json  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md  security_vulnerability.md
.husky/: commit-msg  pre-commit
.terragon/: config.yaml  value-metrics.json
benchmarks/: pytest-benchmark.ini  run_benchmarks.py
benchmarks/benchmark_dockerfiles/: complex.dockerfile  simple.dockerfile
config/: development.yml  logging.yml  production.yml
deploy/: production.yaml
deployment_reports/: deployment_checklist_production_20250816_203148.txt  deployment_checklist_production_20250816_203221.txt  deployment_checklist_production_20250816_203259.txt  readiness_report_production_20250816_203148.json  readiness_report_production_20250816_203221.json  readiness_report_production_20250816_203259.json
docs/: AUTONOMOUS_EXECUTION.md  BEST_PRACTICES.md  DEVELOPMENT.md  ENVIRONMENT_SETUP.md  OBSERVABILITY.md  PERFORMANCE.md  ROADMAP.md  SDLC_ENHANCEMENT_SUMMARY.md  SDLC_IMPLEMENTATION_SUMMARY.md  SDLC_STATUS.md  SECURITY_COMPLIANCE.md  SETUP_REQUIRED.md  TROUBLESHOOTING.md  WORKFLOW_TEMPLATES.md
docs/adr/: README.md
docs/api/: README.md
docs/deployment/: README.md  SBOM.md
docs/examples/: README.md
docs/guides/: README.md
docs/monitoring/: README.md
docs/runbooks/: README.md
docs/status/: autonomous-completion-summary-2025-07-26.md  autonomous-completion-summary.md  autonomous-enhancement-summary-2025-07-31.md  autonomous-summary-2025-07-26.md  metrics-2025-07-25.json  metrics-2025-07-26.json  summary-2025-07-25.md
docs/testing/: README.md
docs/workflows/: README.md
monitoring/: alertmanager.yml  docker-compose.observability.yml  docker-compose.yml  otel-collector-config.yaml  prometheus-alerts.yml  prometheus.yml
scripts/: automation-pipeline.py  automation-scripts.sh  build.sh  collect-metrics.py  generate-sbom.sh  production_deployment.py  repository-health-check.sh
src/: autonomous_backlog.py
src/docker_optimizer/: __init__.py  adaptive_intelligence.py  adaptive_performance_engine.py  adaptive_scaling_engine.py  advanced_resilience.py  advanced_security.py  (+55 more)
test_batch/: dockerfile1  dockerfile2  dockerfile3
tests/: __init__.py  conftest.py  test_advanced_security.py  test_ai_optimization_engine.py  test_ai_performance_suite.py  test_algorithms.py  test_autonomous_backlog.py  test_bioneuro_olfactory_fusion.py  test_cli.py  test_cli_language_detection.py  test_cli_optimization_presets.py  test_cli_registry_integration.py  test_config.py  test_data_validation.py  test_enhanced_error_handling.py  test_enhanced_validation.py  test_error_handling_enhanced.py  test_external_security.py  test_health_enhanced.py  test_import_dependencies.py  test_integration.py  test_language_optimizer.py  test_layer_analyzer.py  test_logging_observability.py  test_models.py  test_multistage.py  test_optimization_presets.py  test_optimizer.py  test_parser.py  test_performance.py  test_performance_enhanced.py  test_quantum_task_planner.py  test_realtime_suggestions.py  test_registry_integration.py  test_security.py  test_sentiment_analyzer.py  test_size_estimator.py
(+31 files in other folders)
